--- a/src/main/resources/templates/journal/home.html
+++ b/src/main/resources/templates/journal/home.html
@@ -19,13 +19,13 @@
         <nav>
             <ul class="nav nav-pills pull-right">
                 <li class="active" id="home"><a href="#">Home</a></li>
-                <li id="qsLogoutBtn"><a href="#">Logout</a></li>
+                <li id="qsLogoutBtn"><a href="/logout">Logout</a></li>
             </ul>
         </nav>
         <h3 class="text-muted">App.com</h3>
     </div>
     <div class="jumbotron">
-        <h3>Hallo <span th:text="#{userId}">userId</span></h3>
+        <h3>Hallo <span th:text="${userId}">userId</span></h3>
     </div>
     <div class="row marketing">
         <div class="col-lg-6">
@@ -56,14 +56,6 @@
 <script type="text/javascript">
     $(function () {
         $.growl({title: "Welcome  ${userId}", message: "We hope you enjoy using this site!"});
-    });
-    $("#qsLogoutBtn").click(function(e) {
-        e.preventDefault();
-        $("#home").removeClass("active");
-        $("#password-login").removeClass("active");
-        $("#qsLogoutBtn").addClass("active");
-        // assumes we are not part of SSO so just logout of local session
-        window.location = "${fn:replace(pageContext.request.requestURL, pageContext.request.requestURI, '')}/logout";
     });
 </script>
 
