Worked on README and added some content to the "home" page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TEST</title>
+    <title>It works!</title>
 </head>
 <body>
-
+    <h1>It works!</h1>
+    <p>Your sample application is running. Click <a href="/protected/home">here</a> to get to the protected area of your application.</p>
 </body>
 </html>
